--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 ANTHROPIC_API_KEY="..."
 GCP_API_KEY="..."
 OPENAI_API_KEY="..."
+MONGO_USERNAME="..."
+MONGO_PASSWORD="..."
+MONGO_URI="..."
 NGROK_DOMAIN="..."
 TWILIO_ACCOUNT_SID="..."
 TWILIO_AUTH_TOKEN="..."
