--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 anthropic~=0.5.0
+dnspython~=2.4.2
 fastapi~=0.104.0
 httpx~=0.25.0
 openai~=0.28.1
+numpy~=1.26.1
 pydub~=0.25.1
+pymongo~=4.6.0
 python-multipart~=0.0.6
 twilio~=8.10.0
 uvicorn[standard]~=0.23.2
