Rename 'NGROK_DOMAIN' to 'WEBHOOK_DOMAIN' in preparation for permanent deployment to AWS

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ OPENAI_API_KEY="..."
 MONGO_USERNAME="..."
 MONGO_PASSWORD="..."
 MONGO_URI="..."
-NGROK_DOMAIN="..."
 TWILIO_ACCOUNT_SID="..."
 TWILIO_AUTH_TOKEN="..."
 TWILIO_PHONE_NUMBER="..."
+WEBHOOK_DOMAIN="..."
